<resources>
    <string name="app_name">BukuKu</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bukuku">BukuKu</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="need_register">Need Register?</string>
    <string name="choose_3_fav">Choose your\ntop 3 favorite</string>
    <string name="genre">Genre!</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="genre1">Genre</string>
    <string name="book">Book!</string>
    <string name="book_title">Book Title</string>
    <string name="searchbar_hint">Search</string>
    <string name="i_wanna_read">I want to read…</string>
    <string name="chapter_1_d">Chapter %1$d —></string>
    <string name="_34_complete">34% Complete</string>
    <string name="lorem">(sneakpeak of the latest chapter) Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</string>
    <string name="see_more">see more on your library…</string>
    <string name="recommendation">Recommendation</string>
    <string name="discover_more">discover more…</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="last_selected_book">Last Selected Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating</string>
    <string name="author">Author</string>
    <string name="tags">Tags</string>
    <string name="isbn">ISBN</string>
    <string name="your_library">Your Library</string>
    <string name="favorite">Favorite</string>
    <string name="you_might_want_to_revisit_the_past">You might want to revisit the past~</string>
    <string name="retry">Retry</string>
    <string name="description_about_us">Bukuku is an application that can help reader to find and read books easily. Difficulty in choosing the perfect book to read, motivate us to solve the problem through BukuKu. This project is a Capstone-based project for Bangkit Academy 2023 Batch 1.</string>
    <string name="synopsys">Synopsys</string>
    <string name="made_by">Made Proudly By C23-PR587</string>
    <string name="pm">Project Management</string>
    <string name="arif_dyah">Muhammad Arif Pangestu\nDyah Ayu Astuti (Asst.)</string>
    <string name="cc">Cloud Computing</string>
    <string name="arif_adi">Muhammad Arif Pangestu\nYahya Adi Rahman</string>
    <string name="android">Android</string>
    <string name="rafi">Muhammad Rafi Irfansyah</string>
    <string name="ml">Machine Learning</string>
    <string name="dyah_shafa_azizah">Dyah Ayu Astuti\nShafa Meira Wahyono\nNur Azizah Munir</string>
    <string name="uiux">UI/UX Designer</string>
    <string name="shafa_rafi">Shafa Meira Wahyono\nMuhammad Rafi Irfansyah</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>