<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".1"
        android:contentDescription="@string/book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_buku" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container_buy"
        app:layout_constraintEnd_toEndOf="@+id/img_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_book"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:src="@drawable/sample_book"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_book_title"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/book_title"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_synopsis"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:alpha="0.7"
                android:fontFamily="@font/poppins"
                android:justificationMode="inter_word"
                android:text="@string/book_title"
                android:textAlignment="textStart"
                tools:ignore="RtlCompat"
                tools:targetApi="o" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rating"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/rating"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_author"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/author" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_tags"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/tags" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_isbn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/isbn" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/container_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="#FDF5E7"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="Price"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_buy"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#E0D2BA"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="Buy"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
