<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/bottom_navigation"
        tools:ignore="ScrollViewCount,UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_book">

            <SearchView
                android:id="@+id/sv_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/selected_genre_background"
                android:iconifiedByDefault="false"
                android:queryHint="@string/i_wanna_read"
                android:inputType="none"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_last_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/last_selected_book"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sv_search" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_selected">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/book"
                    android:src="@drawable/sample_book"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/poppins"
                    android:maxLines="2"
                    android:text="@string/book_title"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha=".6"
                    android:fontFamily="@font/poppins"
                    android:maxLines="4"
                    android:text="@string/lorem"
                    android:textSize="9sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_your_library"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Your Library"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_history" />

            <GridView
                android:id="@+id/gv_library"
                android:layout_width="wrap_content"
                android:layout_height="496dp"
                android:gravity="center"
                android:numColumns="2"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_your_library"
                tools:ignore="NestedScrolling"
                tools:listitem="@layout/item_book_big" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_see_more_library"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/see_more"
                android:textStyle="italic"
                android:alpha="0.6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gv_library" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_recommendation"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recommendation"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_see_more_library"
                app:layout_constraintStart_toStartOf="@+id/tv_see_more_library"
                app:layout_constraintTop_toBottomOf="@id/tv_see_more_library" />

            <GridView
                android:id="@+id/gv_recommendation"
                android:layout_width="0dp"
                android:layout_height="496dp"
                android:gravity="center"
                android:numColumns="2"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recommendation"
                tools:ignore="NestedScrolling"
                tools:listitem="@layout/item_book_big" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_discover_more"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.6"
                android:text="@string/discover_more"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gv_recommendation" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bottom_nav"
        style="@style/BottomNavTextStyle"
        app:menu="@menu/navbar_menu" />

</RelativeLayout>
